fixing delpoy (Items)

--- a/my-app/jsconfig.json
+++ b/my-app/jsconfig.json
@@ -1,7 +1,8 @@
 {
   "compilerOptions": {
     "paths": {
-      "@/*": ["./src/*"]
+      "@/*": ["./src/*"],
+      "@/Items/*": ["./src/Items/*"]
     }
   }
 }
