--- a/my-app/jsconfig.json
+++ b/my-app/jsconfig.json
@@ -1,8 +1,7 @@
 {
   "compilerOptions": {
     "paths": {
-      "@/*": ["./src/*"],
-      "@/Items/*": ["./src/Items/*"]
+      "@/*": ["./src/*"]
     }
   }
 }
